--- a/html/product/productDetail.html
+++ b/html/product/productDetail.html
@@ -30,42 +30,52 @@
         </div>
     </div>
 
- <!-- Chỉ có navbar là sticky -->
- <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            Menu
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
-                        QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
-                <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
-                        PHÒNG CHÁY - CHỮA CHÁY</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        MẢNG AN NINH
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
-                                Thiết bị giám sát</a></li>
-                        <li><a class="dropdown-item" href="/html/Security/security.html">
-                                Dịch vụ an ninh</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ
-                        THUẬT TÒA NHÀ</a></li>
-                <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
-            </ul>
+    <!-- Chỉ có navbar là sticky -->
+    <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                Menu
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH VỤ
+                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            HỆ THỐNG PHÒNG CHÁY - CHỮA CHÁY
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/solution/solution.html?giaiPhapBaoChay">
+                                    Giải pháp quản lý cảnh báo cháy sớm</a></li>
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiBaoChay">
+                                    Thiết bị phòng cháy - chữa cháy</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            DỊCH VỤ AN NINH
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
+                                    Thiết bị giám sát</a></li>
+                            <li><a class="dropdown-item" href="/html/Security/security.html">
+                                    Dịch vụ an ninh</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">DỊCH VỤ KỸ
+                            THUẬT TÒA NHÀ</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<!-- End header -->
+    </nav>
+    <!-- End header -->
 
 
         <section>
