--- a/html/index.html
+++ b/html/index.html
@@ -39,14 +39,9 @@
         </div>
     </div>
 
-    <!-- Chỉ có navbar là sticky -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-
-    </nav>
     <!-- End header -->
-
-    <section id="headBanner" class="section-p1">
-        <div class="container-fluid header-carousel px-0 mb-5">
+    <section id="headBanner" class="section-p1">        
+        <div class="mt-3 container-fluid header-carousel px-0 mb-5">
             <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -115,7 +110,7 @@
                             <i class="fa-solid fa-cloud-bolt fa-2x"></i>
                         </div>
                         <h4 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h4>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiQuanTrac">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-md-6 col-lg-3">
@@ -124,7 +119,7 @@
                             <i class="fa-solid fa-fire fa-2x"></i>
                         </div>
                         <h4 class="mb-4">Hệ thống phòng cháy chữa cháy</h4>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiBaoChay">Tìm hiểu thêm</a>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-md-6 col-lg-3">
