--- a/html/product/product.html
+++ b/html/product/product.html
@@ -44,14 +44,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">MẢNG
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiBaoChay">MẢNG
-                            PHÒNG CHÁY - CHỮA CHÁY</a></li>
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH VỤ
+                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            MẢNG AN NINH
+                            HỆ THỐNG PHÒNG CHÁY - CHỮA CHÁY
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/html/solution/solution.html?giaiPhapBaoChay">
+                                    Giải pháp quản lý cảnh báo cháy sớm</a></li>
+                            <li><a class="dropdown-item" href="/html/product/product.html?thietBiBaoChay">
+                                    Thiết bị phòng cháy - chữa cháy</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            DỊCH VỤ AN NINH
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/html/product/product.html?thietBiCanhBao">
@@ -60,7 +70,7 @@
                                     Dịch vụ an ninh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">MẢNG DỊCH VỤ KỸ
+                    <li class="nav-item"><a class="nav-link pd" href="/html/buildingServices/bms.html">DỊCH VỤ KỸ
                             THUẬT TÒA NHÀ</a></li>
                     <li class="nav-item"><a class="nav-link pd" href="/html/Contact.html">LIÊN HỆ</a></li>
                 </ul>
@@ -68,8 +78,6 @@
         </div>
     </nav>
     <!-- End header -->
-
-
 
     <section class="py-1">
         <div class="container px-4 px-lg-5 mt-5">
