--- a/html/solution/Solution.html
+++ b/html/solution/Solution.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/img/ico.ico">
-    <title>BMS - Building Management System</title>
+    <title>Giải pháp</title>
     <link rel="stylesheet" href="/CSS/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CSS/bms.css">
+    <script type="module" src="/js/solution/Solution.js"></script>
     <script src="/js/All/all.js"></script>
 </head>
 
@@ -80,16 +80,16 @@
 
 
     <section class="py-5">
-        <div class="container px-4 px-lg-5">
-            <h3 class="text-center">BMS - Building Management System</h3 class="text-center">
-        </div>
         <div class="container px-4 px-lg-5 mt-5">
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="bms-list">
+            <h1 class="text-center mb-5 fw-bold" id="solution-title"></h1>
+            <div id="solution-details">
+            </div>
 
+            <div class="text-center mt-5">
+                <a id="view-products-btn" class="btn btn-primary btn-lg">Thiết bị phòng cháy - chữa cháy</a>
             </div>
         </div>
     </section>
-
 
     <footer class="bg-light py-3">
         <div class="container text-center">
@@ -135,10 +135,6 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="/js/BuildingService/buidingServicesHome.js"></script>
-
 </body>
-
-
 
 </html>
