Update footer, update solution, update division

--- a/html/index.html
+++ b/html/index.html
@@ -75,7 +75,7 @@
                                             thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
                                             nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
                                             an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
+                                        <a href="/html/aboutUs.html" class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
                                             thêm</a>
                                     </div>
                                 </div>
@@ -107,42 +107,42 @@
                 <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-cloud-bolt fa-2x"></i>
+                            <i class="fa-solid fa-cloud-bolt fa-3x"></i>
                         </div>
-                        <h4 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h4>
+                        <h5 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiQuanTrac">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-fire fa-2x"></i>
+                            <i class="fa-solid fa-fire fa-3x"></i>
                         </div>
-                        <h4 class="mb-4">Hệ thống phòng cháy chữa cháy</h4>
+                        <h5 class="mb-4">Hệ thống phòng cháy chữa cháy</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-lock fa-2x"></i>
+                            <i class="fa-solid fa-lock fa-3x"></i>
                         </div>
-                        <h4 class="mb-4">Dịch vụ an ninh</h4>
-                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/product/product.html?thietBiCanhBao">Tìm hiểu thêm</a>
+                        <h5 class="mb-4">Dịch vụ an ninh</h5>
+                        <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/Security/security.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-md-6 col-lg-3">
                     <div class="feature-item p-4 pt-0">
                         <div class="feature-icon p-4 mb-4">
-                            <i class="fa-solid fa-building fa-2x"></i>
+                            <i class="fa-solid fa-building fa-3x"></i>
                         </div>
-                        <h4 class="mb-4">Dịch vụ kỹ thuật tòa nhà</h4>
+                        <h5 class="mb-4">Dịch vụ kỹ thuật tòa nhà</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto" href="/html/buildingServices/bms.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+</section>
 
     <section class="py-3" id="features">
         <div class="text-center mx-auto" style="max-width: 800px;">
@@ -163,7 +163,7 @@
         <div class="container py-5">
             <div class="row g-4 justify-content-center featurs-row">
                 <div class="col-6 col-md-6 col-lg-2">
-                    <div class="featurs-item text-center rounded bg-light p-4">
+                    <div class="shadow featurs-item text-center rounded bg-light p-4">
                         <div class="featurs-icon btn-square rounded-circle mb-5 mx-auto"
                             style="background-color: #3a389b;">
                             <i class="fa-solid fa-medal fa-2x text-white" style="font-size: 3em !important;"></i>
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-6 col-lg-2">
-                    <div class="featurs-item text-center rounded bg-light p-4">
+                    <div class="shadow featurs-item text-center rounded bg-light p-4">
                         <div class="featurs-icon btn-square rounded-circle mb-5 mx-auto"
                             style="background-color: #3a389b;">
                             <i class="fa-solid fa-comments fa-2x text-white" style="font-size: 3em !important;"></i>
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-6 col-lg-2">
-                    <div class="featurs-item text-center rounded bg-light p-4">
+                    <div class="shadow featurs-item text-center rounded bg-light p-4">
                         <div class="featurs-icon btn-square rounded-circle mb-5 mx-auto"
                             style="background-color: #3a389b;">
                             <i class="fa-solid fa-truck fa-2x text-white" style="font-size: 3em !important;"></i>
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-6 col-lg-2">
-                    <div class="featurs-item text-center rounded bg-light p-4">
+                    <div class="shadow featurs-item text-center rounded bg-light p-4">
                         <div class="featurs-icon btn-square rounded-circle mb-5 mx-auto"
                             style="background-color: #3a389b;">
                             <i class="fa-solid fa-hand-holding-dollar fa-2x text-white"
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-md-6 col-lg-2">
-                    <div class="featurs-item text-center rounded bg-light p-4">
+                    <div class="shadow featurs-item text-center rounded bg-light p-4">
                         <div class="featurs-icon btn-square rounded-circle mb-5 mx-auto"
                             style="background-color: #3a389b;">
                             <i class="fa-solid fa-shield fa-2x text-white" style="font-size: 3em !important;"></i>
@@ -236,11 +236,12 @@
             <!-- Links -->
             <div class="row mb-2">
                 <div class="col">
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Sản phẩm cung cấp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ giám sát online</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ hỗ trợ trực tiếp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
+                    <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
 
