--- a/html/solution/Solution.html
+++ b/html/solution/Solution.html
@@ -104,11 +104,12 @@
             <!-- Links -->
             <div class="row mb-2">
                 <div class="col">
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Sản phẩm cung cấp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ giám sát online</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ hỗ trợ trực tiếp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
+                    <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
 
@@ -135,6 +136,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
