--- a/html/Security/security.html
+++ b/html/Security/security.html
@@ -95,31 +95,41 @@
     <!-- Footer -->
     <footer class="bg-light py-3">
         <div class="container text-center">
+            <!-- Social Media -->
             <div class="row mb-2">
                 <div class="col">
                     <a href="#" class="mx-2 text-dark text-decoration-none">Facebook</a>
                     <a href="#" class="mx-2 text-dark text-decoration-none">YouTube</a>
                 </div>
             </div>
+
+            <!-- Links -->
             <div class="row mb-2">
                 <div class="col">
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Sản phẩm cung cấp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ giám sát online</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ hỗ trợ trực tiếp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
+                    <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
+
+            <!-- Copyright -->
             <div class="row mb-2">
                 <div class="col">
                     <p class="m-0">Copyright © 2025 AKS VietNam</p>
                 </div>
             </div>
+
+            <!-- Hotline -->
             <div class="row mb-2">
                 <div class="col">
                     <p class="m-0">Hotline: 04.3998 2227</p>
                 </div>
             </div>
+
+            <!-- Certification Logo -->
             <div class="row">
                 <div class="col">
                     <img src="/img/logo-ask-removebg-preview.png" alt="Certification Badge" class="img-fluid"
@@ -128,6 +138,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- JavaScript -->
     <script type="module" src="/js/Security/securityService.js"></script>
