--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -15,7 +15,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>    
+        crossorigin="anonymous"></script>
     <script src="/js/All/all.js"></script>
 </head>
 
@@ -45,8 +45,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link pd" href="/html/aboutUs.html">GIỚI THIỆU</a></li>
-                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH VỤ
-                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>                    
+                    <li class="nav-item"><a class="nav-link pd" href="/html/product/product.html?thietBiQuanTrac">DỊCH
+                            VỤ
+                            QUAN TRẮC KHÍ TƯỢNG THỦY VĂN</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle pd" href="#" id="dropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -80,35 +81,69 @@
     </nav>
     <!-- End header -->
 
-    <!-- About Start -->
-    <section>
-        <div class="container-fluid py-5 my-5">
-            <div class="container py-5">
-                <div class="row g-5">
-                    <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
-                        <div class="h-100 position-relative">
-                            <img src="/img/Banner/bms/baotrisuachua.jpg" class="img-fluid w-75 rounded" alt=""
-                                style="margin-bottom: 25%;border-radius: 20px;">
-                            <div class="position-absolute w-75"
-                                style="top: 25%; left: 25%;background-color: #3a389b;border-radius: 20px;">
-                                <img src="/img/Banner/he-thong-giam-sat-an-ninh-toan-bo-gia-dinh.jpg"
-                                    class="img-fluid w-100 rounded" alt="">
-                            </div>
+ <!-- Project Start -->
+<div class="container-fluid project py-5 mb-5">
+    <div class="container">
+        <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+            <h1 style="color: #3a389b;">Giới thiệu về AKS Việt Nam</h1>
+            <br>
+            <h5>Cung cấp các giải pháp an ninh và kỹ thuật hàng đầu, bao gồm hệ thống giám sát,
+                cảnh báo an ninh cho ngôi nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ
+                thuật và an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</h5>
+        </div>
+        <div class="row g-5 justify-content-center">
+            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="/img/Banner/AboutWeather.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
+                        <div class="project-content">
+                            <a href="/html/product/product.html?thietBiQuanTrac" class="text-center">
+                                <h4>Dịch vụ quan trắc khí tượng thủy văn</h4>
+                            </a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
-                        <h5 class="text-primary">Về chúng tôi</h5>
-                        <h1 class="mb-4">Giới thiệu về AKS Việt Nam</h1>
-                        <p>Cung cấp các giải pháp an ninh và kỹ thuật hàng đầu, bao gồm hệ thống giám sát,
-                            cảnh báo an ninh cho ngôi nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ
-                            thuật và an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="/img/Banner/AboutFire.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
+                        <div class="project-content">
+                            <a href="/html/solution/solution.html?giaiPhapBaoChay" class="text-center">
+                                <h4>Hệ thống phòng cháy chữa cháy</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="/img/Banner/AboutSecurity.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
+                        <div class="project-content">
+                            <a href="/html/Security/security.html" class="text-center">
+                                <h4>Dịch vụ an ninh</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                <div class="project-item">
+                    <div class="project-img">
+                        <img src="/img/Banner/AboutBms.jpg" class="img-fluid rounded" alt="" style="width: 100%; height: 250px; object-fit: cover;">
+                        <div class="project-content">
+                            <a href="/html/buildingServices/bms.html" class="text-center">
+                                <h4>Dịch vụ kỹ thuật tòa nhà</h4>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- About End -->
-
+    </div>
+</div>
+<!-- Project End -->
 
     <!-- Page Content-->
     <section class="pt-4">
@@ -236,11 +271,12 @@
             <!-- Links -->
             <div class="row mb-2">
                 <div class="col">
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Sản phẩm cung cấp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ giám sát online</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Dịch vụ hỗ trợ trực tiếp</a>
-                    <a href="#" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
+                    <a href="/html/aboutUs.html" class="mx-2 text-dark text-decoration-none">Giới thiệu</a>
+                    <a href="/html/product/product.html?thietBiQuanTrac" class="mx-2 text-dark text-decoration-none">Dịch vụ quan trắc khí tượng thủy văn</a>
+                    <a href="/html/solution/solution.html?giaiPhapBaoChay" class="mx-2 text-dark text-decoration-none">Hệ thống phòng cháy chữa cháy</a>
+                    <a href="/html/Security/security.html" class="mx-2 text-dark text-decoration-none">Dịch vụ an ninh</a>
+                    <a href="/html/buildingServices/bms.html" class="mx-2 text-dark text-decoration-none">Dịch vụ kỹ thuật tòa nhà</a>
+                    <a href="/html/Contact.html" class="mx-2 text-dark text-decoration-none">Liên hệ</a>
                 </div>
             </div>
 
@@ -267,6 +303,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
